docs: update README.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slingshot-yc-directory",
+  "name": "slingshot-dropbox-landing-page",
   "version": "0.1.0",
   "private": true,
   "scripts": {
