feat: header section

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "custom-dashed-border": "^0.1.1",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tabler-icons": "^1.35.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
