feat: react dropzone example

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.2",
     "tabler-icons": "^1.35.0"
   },
   "devDependencies": {
